Added step_ic and pen_cv functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,18 @@ S3method(print,my_new_class)
 S3method(tidy,my_new_class)
 export(add_2_numbers)
 export(hello)
+export(infer)
+export(pen_cv)
+export(step_ic)
+export(strsplit1)
+importFrom(MASS,stepAIC)
 importFrom(broom,tidy)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,select)
+importFrom(magrittr,"%>%")
+importFrom(ncvreg,cv.ncvreg)
+importFrom(stats,lm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,na.pass)
 importFrom(tibble,tibble)
