--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,16 @@ Encoding: UTF-8
 LazyData: true
 Imports:
   broom,
-  tibble
+  tibble,
+  magrittr,
+  dplyr,
+  stats,
+  MASS,
+  ncvreg
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
+Depends: 
+    R (>= 2.10)
