--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,19 @@ Imports:
   dplyr,
   stats,
   MASS,
-  ncvreg
+  ncvreg,
+  selectiveInference,
+  glmnet,
+  knitr,
+  parallel,
+  pbapply,
+  forcats,
+  tidyverse
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),  knitr (>= 1.49), rmarkdown (>= 2.29)
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
     R (>= 2.10)
+VignetteBuilder: knitr
