--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,6 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports:
-  broom,
   tibble,
   magrittr,
   dplyr,
@@ -23,7 +22,8 @@ Imports:
   parallel,
   pbapply,
   forcats,
-  tidyverse
+  tidyverse,
+  broom,
 Suggests: 
     testthat (>= 3.0.0),  knitr (>= 1.49), rmarkdown (>= 2.29)
 Config/testthat/edition: 3
