--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,3 +46,4 @@ importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,na.pass)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
