--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(step_ic)
 importFrom(MASS,stepAIC)
 importFrom(broom,tidy)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
