updates to readme and minor updates to boostrap

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(tidy,selector_pen)
 export(boot.selector.pen)
 export(boot_pen)
 export(boot_stepwise_bic)
+export(ciratio)
 export(full_boot)
 export(infer)
 export(pen_cv)
