fixing problems with selinf for lasso and fw

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(forcats,fct_inorder)
 importFrom(glmnet,cv.glmnet)
+importFrom(glmnet,glmnet)
 importFrom(magrittr,"%>%")
 importFrom(ncvreg,cv.ncvreg)
 importFrom(ncvreg,ncvreg)
