Changning thetidyverse code to base R to improve efficiency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(step_ic)
 importFrom(MASS,stepAIC)
 importFrom(broom,tidy)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
