--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: practicalPSI
+Package: selectInferToolkit
 Type: Package
-Title: Practical Post-Selection Inference
-Version: 0.1.0
+Title: Tools for Inference & Variable Selection
+Version: 0.2.0
 Author: Jinal Shah, Ryan Peterson
 Maintainer: Ryan Peterson <ryan.a.peterson@cuanschutz.edu>
 Description: This is a package designed to make the process of post-selection
@@ -27,7 +27,7 @@ Suggests:
     testthat (>= 3.0.0),  knitr (>= 1.49), rmarkdown (>= 2.29)
 Config/testthat/edition: 3
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Depends: 
     R (>= 3.5),
     broom
