add full/null selectors, inferrer constructor, infer_boot, infer_upsi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,17 +4,20 @@ S3method(coef,selector)
 S3method(infer,selector_two_step_pval)
 S3method(predict,selector)
 S3method(print,`selector_two_step_pval`)
+S3method(print,inferrer)
 S3method(print,selector)
+S3method(tidy,inferrer)
 S3method(tidy,selector)
 S3method(tidy,selector_two_step_pval)
+export(as_inferrer)
 export(as_selector)
 export(boot)
 export(ciratio)
 export(infer)
 export(infer_boot)
-export(infer_hybrid)
 export(infer_pipe)
 export(infer_selective)
+export(infer_upsi)
 export(reselect)
 export(select_full_model)
 export(select_glmnet)
@@ -31,9 +34,12 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dplyr,transmute)
 importFrom(forcats,fct_inorder)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
