--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,9 +52,18 @@ importFrom(rlang,sym)
 importFrom(selectiveInference,fixedLassoInf)
 importFrom(selectiveInference,fs)
 importFrom(selectiveInference,fsInf)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,formula)
+importFrom(stats,glm)
 importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,na.pass)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(utils,tail)
