--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
@@ -35,6 +36,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(forcats,fct_inorder)
@@ -42,12 +44,14 @@ importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,glmnet)
 importFrom(magrittr,"%>%")
 importFrom(ncvreg,cv.ncvreg)
+importFrom(ncvreg,intervals)
 importFrom(ncvreg,ncvreg)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(pbapply,pblapply)
+importFrom(purrr,map)
 importFrom(rlang,sym)
 importFrom(selectiveInference,fixedLassoInf)
 importFrom(selectiveInference,fs)
